--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-ga4": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
