--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
-    "next": "14.2.5",
+    "@next/third-parties": "^14.2.5",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
